syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.analyzer";
option java_outer_classname = "ParticipationAnalizerImpl";


package ParticipationAnalizer;

// The server that you implement must extend the class  <servicename>ImplBase

// ParticipationAnalizer provides statics on how domestic tasks are being distributed across genders.


service ParticipationAnalizer {

   //  Server streaming
   rpc analyzerParticipation(ParticipationRequest) returns (Stream ParticipationStatistics) {}
   rpc SubmitCustomFeedback(Stream CustomFeedbackRequest) returns (CustomFeedbackReply){}
  
}

   //  message of one task entry per student
   message ParticipationRequest {
     repeated Student students = 1;
   }

   // Overall participation statistics
   message ParticipationStatistics {
     float malePercentage = 1;      // Percentage of task done by males
     float femalePercentage = 2;    // Percentage of task done by female
     string summary = 3;            // Summary of percentages of both genders
   }

    message CustomFeedbackRequest {
     string studentName = 1;
     string feedback = 2;
   }

    message CustomFeedbackReply {
     string message = 1;            // feedback saved
   }


   



